// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardCheckboxGroup component calls onChange 1`] = `
Array [
  Array [
    Array [
      "Aerodek Traditional",
    ],
  ],
]
`;

exports[`CardCheckboxGroup component calls onChange 2`] = `
Array [
  Array [
    Array [
      "Aerodek Traditional",
    ],
  ],
  Array [
    null,
  ],
]
`;

exports[`CardCheckboxGroup component renders correctly 1`] = `
<div>
  <div
    class="CardCheckboxGroup"
  >
    <div
      class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput item"
        >
          <label>
            <input
              class="input"
              name="tileType"
              type="checkbox"
              value="Zanda Arktis"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="image"
                  style="background-image: url(path-to-image);"
                />
                <h6
                  class="MuiTypography-root title Typography MuiTypography-h6"
                >
                  Zanda Arktis
                </h6>
                <p
                  class="MuiTypography-root paragraph Typography MuiTypography-body1"
                >
                  6 colours
                </p>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput item"
        >
          <label>
            <input
              class="input"
              name="tileType"
              type="checkbox"
              value="Aerodek Traditional"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="image"
                  style="background-image: url(path-to-image);"
                />
                <h6
                  class="MuiTypography-root title Typography MuiTypography-h6"
                >
                  Aerodek Traditional
                </h6>
                <p
                  class="MuiTypography-root paragraph Typography MuiTypography-body1"
                >
                  6 colours
                </p>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardCheckboxGroup component renders with initial value 1`] = `
<div>
  <div
    class="CardCheckboxGroup"
  >
    <div
      class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput item"
        >
          <label>
            <input
              checked=""
              class="input"
              name="tileType"
              type="checkbox"
              value="Zanda Arktis"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="image"
                  style="background-image: url(path-to-image);"
                />
                <h6
                  class="MuiTypography-root title Typography MuiTypography-h6"
                >
                  Zanda Arktis
                </h6>
                <p
                  class="MuiTypography-root paragraph Typography MuiTypography-body1"
                >
                  6 colours
                </p>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput item"
        >
          <label>
            <input
              class="input"
              name="tileType"
              type="checkbox"
              value="Aerodek Traditional"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="image"
                  style="background-image: url(path-to-image);"
                />
                <h6
                  class="MuiTypography-root title Typography MuiTypography-h6"
                >
                  Aerodek Traditional
                </h6>
                <p
                  class="MuiTypography-root paragraph Typography MuiTypography-body1"
                >
                  6 colours
                </p>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardCheckboxGroup component renders with nonlabel string 1`] = `
<div>
  <div
    class="CardCheckboxGroup"
  >
    <div
      class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput item"
        >
          <label>
            <input
              class="input"
              name="tileType"
              type="checkbox"
              value="Zanda Arktis"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="image"
                  style="background-image: url(path-to-image);"
                />
                <h6
                  class="MuiTypography-root title Typography MuiTypography-h6"
                >
                  Zanda Arktis
                </h6>
                <p
                  class="MuiTypography-root paragraph Typography MuiTypography-body1"
                >
                  6 colours
                </p>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput item"
        >
          <label>
            <input
              class="input"
              name="tileType"
              type="checkbox"
              value="Aerodek Traditional"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <div
                  class="image"
                  style="background-image: url(path-to-image);"
                />
                <h6
                  class="MuiTypography-root title Typography MuiTypography-h6"
                >
                  Aerodek Traditional
                </h6>
                <p
                  class="MuiTypography-root paragraph Typography MuiTypography-body1"
                >
                  6 colours
                </p>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-2"
      >
        <div
          class="CardInput"
        >
          <label>
            <input
              class="input"
              type="checkbox"
              value="none"
            />
            <div
              aria-disabled="false"
              class="MuiButtonBase-root ToggleCard card"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiPaper-root MuiCard-root body MuiPaper-elevation1 MuiPaper-rounded"
              >
                <h6
                  class="MuiTypography-root title title--only Typography MuiTypography-h6"
                >
                  arktis
                </h6>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
